Fixed heading on mobile devises

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@ h1 {
     font-size: 24px;
 }
 @media (max-width: 767px) {
+    h1 {
+        font-size: 48px;
+    }
     .theme {
         text-align: center;
     }
